# weekly-rust-bot

./: Cargo.toml  sample.env
src/: main.rs
src/bot/: bot.rs
src/scraper/: scraper.rs
