[package]
name = "rust-weekly"
version = "0.1.0"
authors = ["Himang Sharatun <himanghadi@ruangguru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
select = "0.5.0"
scraper = "0.12.0"
